[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-anything"
version = "0.1.0"
description = "A multimodal RAG system that can process and retrieve information from any type of document"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "RAG-Anything Contributors" },
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "multimodal",
    "llm",
    "document-processing",
    "vector-search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lightrag-hku>=1.3.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
pdf = [
    "pymupdf>=1.24.0",
    "pdfminer.six>=20221105",
]
ocr = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
]
audio = [
    "openai-whisper>=20231117",
]
video = [
    "opencv-python>=4.8.0",
]
all = [
    "rag-anything[pdf,ocr,audio,video]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/HKUDS/RAG-Anything"
Repository = "https://github.com/HKUDS/RAG-Anything"
Issues = "https://github.com/HKUDS/RAG-Anything/issues"
Documentation = "https://github.com/HKUDS/RAG-Anything/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["raganything"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["raganything"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cov_report = "term-missing"
